# looptimum

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PILOT.md  README.md  SECURITY.MD  intake.md  pyproject.toml  requirements-dev.txt
benchmarks/: README.md  case_study.md  run_trial_efficiency_benchmark.py  summary.json
client_harness_template/: README.md  README_INTEGRATION.md  aws_batch_config.example.json  aws_config.py  aws_executor.py  aws_models.py  objective.py  objective_aws_batch_example.py  run_one_eval.py  starterkit_airflow.py  starterkit_config.py  starterkit_events.py  starterkit_mlflow.py  starterkit_models.py  starterkit_queue_worker.py  starterkit_scheduler.py  starterkit_slurm.py  starterkit_tracking.py  starterkit_wandb.py
docs/: README.md  auth-preview.md  aws-batch-integration.md  ci-knob-tuning.md  constraints.md  coordination-preview.md  dashboard-preview.md  decision-trace.md  faq.md  feedback-loop.md  how-it-works.md  index.md  integration-guide.md  integration-starter-kit.md  operational-semantics.md  packages.md  pilot-checklist.md  pricing-tiers.md  quick-reference.md  recovery-playbook.md  search-space.md  security-data-handling.md  service-api-preview.md  stability-guarantees.md  type-safety.md  use-cases.md
examples/: README.md
meshing_example/: README.md  instructions.json  run_optuna_meshing.py
quickstart/: README.md  etl-pipeline-knob-tuning.md
reports/: README.md  phase7_completion_audit.md  phase8_external_inputs.md  phase8_release_readiness.md  post_v0.2.0_followup_backlog.md  sample_workup.md  v0.3.0_release_readiness.md  (+2 more)
(+325 files in other folders)
