[project]
name = "looptimum"
version = "0.3.2"
description = "File-backed optimum trial targeting templates for suggest/ingest workflows."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6,<7"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version = "3.12"
files = [
  "templates/_shared/*.py",
  "templates/bo_client/run_bo.py",
  "client_harness_template/run_one_eval.py",
]
check_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_reexport = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_error_codes = true
pretty = true
# Temporary suppression allowlist policy:
# keep overrides narrow and time-bounded, and avoid blanket/global ignores.

[[tool.mypy.overrides]]
module = ["acquisition", "surrogate_proxy", "surrogate_gp"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["torch", "botorch.*", "gpytorch.*"]
ignore_missing_imports = true
